...
          subtitle: "A text message containing a verification code will be sent to this phone number. Message and data rates may apply."
        )
        .padding(.bottom, 32)

        VStack(spacing: 24) {
          VStack(spacing: 4) {
            ClerkPhoneNumberField("Enter your phone number", text: $phoneNumber)
              .textContentType(.telephoneNumber)
              .keyboardType(.numberPad)
              .focused($isFocused)
              .onFirstAppear {
                isFocused = true
              }
...
